<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_texture">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstlayout"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/deals_white_bar" >

            <TextView
                android:text="@string/yourewards"
                android:id="@+id/yourrewardprogress"
                style="@style/TextviewTheme"
                android:layout_marginTop="10dp">
            </TextView>
            <TextView
                android:layout_below="@+id/yourrewardprogress"
                android:id="@+id/yourrewardsDesc"
                android:text="@string/yourrewardsDesc"
                style="@style/TextviewTheme"
                />
            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/foodRatingBar"
                android:numStars="5"
                android:stepSize="1.0"
                android:isIndicator="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/yourrewardsDesc" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/firstlayout"
            android:layout_height="125dp"
            android:id="@+id/percentlayout"
            android:layout_marginTop="15dp"
            android:background="@drawable/deals_green_bar"            >
            <TextView
                android:id="@+id/youroffers"
                android:text="@string/myfridgeheader"
                style="@style/TextviewTheme"
                android:paddingTop="20dp"/>

            <TextView
                android:id="@+id/txtForOffMainSub"
                style="@style/TextSmallThemeWhite"
                android:layout_gravity="center"
                android:text="@string/offSubTxt"
                android:layout_below="@+id/txtForOffMain"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/termsBtn"
                android:layout_centerVertical="true"
                style="@style/NextArrowTheme"/>

            <TextView
                android:layout_below="@+id/youroffers"
                android:id="@+id/txtForOffMain"
                style="@style/TextXLargeTheme"
                android:layout_gravity="center"
                android:text="@string/offTxt"
                android:textSize="@dimen/textSizeXLarge"

                android:layout_centerHorizontal="true" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/percentlayout"
            android:layout_height="fill_parent"
            android:background="@drawable/myfridge_primary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/favheader"
                android:text="@string/myfridgefav"
                style="@style/TextviewTheme"
                android:paddingTop="20dp"
                android:layout_alignParentLeft="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/percentlayout"
            android:layout_height="fill_parent"
            android:background="@drawable/myfrdgemenus"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/menusLeft"
                style="@style/ArrowImageThemeLeft"/>
            <ImageView
                android:id="@+id/menusRight"
                style="@style/NextArrowTheme"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/normalMargin"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/percentlayout"
            android:layout_height="fill_parent"
            android:background="@drawable/myfridgewhitebg"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/bottomtext"
                android:text="@string/bottomtext"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                style="@style/TextviewTheme"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>