<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/maplayout"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/locations_header" >
        <TextView
            android:text="@string/itemlocation"
            android:id="@+id/itemlocation"
            style="@style/TextviewTheme"
            android:textSize="@dimen/headerTxt"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/myfridgewhitebg" >
        <TextView
            android:text="@string/findyournapaheader"
            android:id="@+id/findyournapa"
            style="@style/TextviewTheme"
            android:layout_marginTop="@dimen/normalMargin"
            android:textSize="@dimen/headerTxt"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/findyournapasubtitle"
            android:id="@+id/subTitleFridges"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_below="@+id/findyournapa" />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerForMenuLocs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>